--- a/sass/partials/_structure.scss
+++ b/sass/partials/_structure.scss
@@ -19,7 +19,7 @@
 }
 
 .main-section {
-	width: 100vw;
+	width: 100%;
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
